import { UuidValueObject } from 'src/context/shared/domain/uuid-value-object';

export class ApiKeyId extends UuidValueObject {}
